# ath_DE-test

./: .gitignore  Dockerfile  README.md  pyproject.toml  start-spark.sh
athena_de_test/: dimms.ipynb  explore.ipynb  facts.ipynb  load.ipynb  viz.ipynb  warehouse.ipynb
