[tool.poetry]
name = "athena-de-test"
version = "0.1.0"
description = ""
authors = ["Emmanuel <kipronofb@outlook.com>"]
readme = "README.md"
packages = [{include = "athena_de_test"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pyarrow = "^14.0.2"
pyspark = "^3.5.0"
seaborn = "^0.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
